[package]
name = "reth-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
revm-primitives.workspace = true
revm.workspace = true
reth-interfaces.workspace = true
#reth-trie = { workspace = true, features = ["metrics"] }
#reth-trie-parallel = { workspace = true, features = ["prefetch"] }

futures-util.workspace = true
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
parking_lot.workspace = true

[features]
test-utils = ["dep:parking_lot"]