[package]
name = "reth-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-execution-errors.workspace = true
reth-primitives.workspace = true
revm-primitives.workspace = true
reth-prune-types.workspace = true
reth-storage-errors.workspace = true
reth-execution-types.workspace = true
reth-trie.workspace = true

revm.workspace = true
alloy-eips.workspace = true
auto_impl.workspace = true
futures-util.workspace = true
parking_lot = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
parking_lot.workspace = true

[features]
default = ["std"]
std = []
test-utils = ["dep:parking_lot"]
