[package]
name = "reth-bsc-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "EVM chain spec implementation for bsc."

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec = { workspace = true, features = ["bsc"] }
reth-ethereum-forks = { workspace = true, features = ["bsc"] }
reth-primitives-traits.workspace = true

# bsc
reth-bsc-forks.workspace = true

# ethereum
alloy-chains.workspace = true
alloy-primitives.workspace = true

# io
serde_json.workspace = true

# misc
once_cell.workspace = true
derive_more.workspace = true

[dev-dependencies]
reth-chainspec = { workspace = true, features = ["test-utils"] }
alloy-genesis.workspace = true
op-alloy-rpc-types.workspace = true

[features]
default = ["std"]
std = []