[package]
name = "reth-bsc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-cli-commands.workspace = true
reth-consensus.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-db-api.workspace = true
reth-db-common.workspace = true
reth-downloaders.workspace = true
reth-provider.workspace = true
reth-prune.workspace = true
reth-stages.workspace = true
reth-static-file.workspace = true
reth-node-core.workspace = true
reth-chainspec.workspace = true
reth-stages-types.workspace = true
reth-node-events.workspace = true
reth-network-p2p.workspace = true
reth-errors.workspace = true
reth-config.workspace = true
reth-cli.workspace = true
reth-cli-runner.workspace = true
reth-cli-util.workspace = true
reth-node-builder.workspace = true
reth-tracing.workspace = true
reth-exex.workspace = true

# so jemalloc metrics can be included
reth-node-metrics.workspace = true

## bsc
reth-bsc-chainspec.workspace = true
reth-bsc-consensus.workspace = true
reth-bsc-evm.workspace = true
reth-bsc-node.workspace = true

# eth
alloy-eips.workspace = true
alloy-primitives.workspace = true

# misc
futures-util.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

# io
fdlimit.workspace = true

tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
tracing.workspace = true
eyre.workspace = true

[dev-dependencies]
tempfile.workspace = true
reth-stages = { workspace = true, features = ["test-utils"] }
reth-db-common.workspace = true
reth-cli-commands.workspace = true

[features]
bsc = [
    "reth-bsc-evm/bsc",
    "reth-provider/bsc",
    "reth-node-core/bsc",
    "reth-bsc-node/bsc",
]
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "reth-node-core/asm-keccak",
    "reth-bsc-node/asm-keccak",
]

# Jemalloc feature for vergen to generate correct env vars
jemalloc = [
    "reth-node-core/jemalloc",
    "reth-node-metrics/jemalloc"
]
