[package]
name = "reth-bsc-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-codecs.workspace = true
reth-consensus-common.workspace = true
reth-consensus.workspace = true
reth-db-api.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-engine-primitives.workspace = true
reth-network-p2p.workspace = true
reth-network-peers.workspace = true
reth-beacon-consensus.workspace = true
reth-evm.workspace = true
reth-primitives-traits.workspace = true

# bsc
reth-bsc-chainspec.workspace = true
reth-bsc-consensus.workspace = true
reth-bsc-evm.workspace = true
reth-bsc-payload-builder.workspace = true

# eth
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true

# crypto
secp256k1.workspace = true
sha3 = "0.10.8"
blst = "0.3.11"

# misc
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
lazy_static = "1.4.0"
lru = "0.12"
bitset = "0.1.2"
thiserror = "1.0.59"
serde = { version = "1.0.203", features = ["derive"] }
bytes = "1.6.0"
serde_cbor = "0.11.2"

# async
futures-util.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream.workspace = true

[dev-dependencies]
mockall = "0.12"
reth-provider = { workspace = true, features = ["test-utils"] }
rand = "0.8.5"

[features]
bsc = [
    "reth-bsc-consensus/bsc",
    "reth-bsc-evm/bsc",
    "reth-bsc-payload-builder/bsc",
    "reth-beacon-consensus/bsc",
    "reth-primitives/bsc",
    "reth-consensus-common/bsc",]
