[package]
name = "reth-evm-ethereum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
reth-ethereum-consensus.workspace = true
reth-prune-types.workspace = true
reth-execution-types.workspace = true
reth-trie.workspace = true

# Ethereum
revm-primitives.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-sol-types.workspace = true

# misc
tracing.workspace = true

# async
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
reth-testing-utils.workspace = true
reth-revm = { workspace = true, features = ["test-utils"] }
secp256k1.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = []