[package]
name = "reth-triedb-smoke-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Smoke test for comparing BSC and Reth StateTrie implementations"

# Remove binary configuration since we're using tests now

[dependencies]
# reth
reth-triedb-state-trie = { path = "../state-trie" }
reth-triedb-pathdb = { path = "../db/pathdb" }
reth-triedb-common = { path = "../common" }
reth-trie = { path = "../../trie/trie" }
reth-trie-common = { path = "../../trie/common" }
reth-primitives-traits = { path = "../../primitives-traits" }
reth-storage-errors = { path = "../../storage/errors" }
reth-trie-db = { path = "../../trie/db" }
reth-db = { path = "../../storage/db", features = ["test-utils"] }
reth-db-api = { path = "../../storage/db-api" }
alloy-rlp = "0.3"

# alloy
alloy-primitives = "1.3.0"

# Random generation
rand = "0.8"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
