[package]
name = "reth-triedb-pathdb"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PathDB implementation for RocksDB integration"

[dependencies]
# reth
reth-triedb-common = { path = "../../common" }

# alloy
alloy-primitives = "1.3.0"

# RocksDB
rocksdb = "0.21"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# LRU Cache
schnellru = "0.2"

# Testing
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tempfile = "3.8"
